# dj-db-rotated-secret

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.sh  setup.cfg
.github/workflows/: actions.yml
dj_db_rotated_secret/: __init__.py  db_rotated_secret.py  settings.py
example_project/: settings.py  urls.py
example_project/example_project/: settings.py
example_project/example_project/tests/: test_basic.py
example_project/posts/: apps.py  models.py
example_project/posts/migrations/: 0001_initial.py
example_project/posts/tests/: factories.py
example_project/tests/: test_basic.py  test_db_pw_rotated.py
