[tool.poetry]
name = "dj-db-rotated-secret"
version = "0.1.0"
description = "AWS Secrets has a auto-rotation feature, but Django doesn't support it out of the box. This package provides a way to rotate the secret in Django settings."
authors = ["Justin Louie <224840+nitsujri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
