[tool.poetry]
name = "dj-db-rotated-secret"
version = "0.1.0"
description = "AWS Secrets has a auto-rotation feature, but Django doesn't support it out of the box. This package provides a way to rotate the secret in Django settings."
authors = ["Justin Louie <224840+nitsujri@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "dj_db_rotated_secret" }]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
psycopg2-binary = "^2.9.9"
factory-boy = "^3.3.1"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
